Bug 1525416 - Teach libffi/src/closures.c about ARM64_WIN64 r=froydnj

I added ARM64_WIN64 to every line that mentioned X86_WIN32 and X86_WIN64.

This makes sure the allocation routines do the proper VirtualProtect on the trampolines.

Differential Revision: https://phabricator.services.mozilla.com/D19567